# LaTeX2Wordcloud

./: .gitignore  Analyis_and_Deployment.ipynb  Dockerfile  LaTeX2Wordcloud.py  Procfile  Readme.md  nltk_data_requirements.txt  pyproject.toml  requirements.txt  ui.py
src/latex2wordcloud/: LaTeXStripper.py  LateX2WordCloud.py
